// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderUsage > basic 1`] = `
"A test command

USAGE:
  cmd1 test <OPTIONS>

OPTIONS:
  -f, --foo <foo>          The foo option
  --bar                    The bar option
  -b, --baz [baz]          The baz option
  -q, --qux <qux>          The qux option

EXAMPLES:
  # Example 1
  $ test --foo bar --bar --baz 42 --qux quux
  # Example 2
  $ test -f bar -b 42 -q quux
"
`;

exports[`renderUsage > enable usageOptionType 1`] = `
"A test command

USAGE:
    cmd1 test <OPTIONS>

OPTIONS:
    -f, --foo <foo>            [string]  The foo option
    --bar                      [boolean] The bar option
    -b, --baz [baz]            [number]  The baz option
    -q, --qux <qux>            [string]  The qux option

EXAMPLES:
    # Example 1
    $ test --foo bar --bar --baz 42 --qux quux
    # Example 2
    $ test -f bar -b 42 -q quux
"
`;

exports[`renderUsage > no examples 1`] = `
"A test command

USAGE:
  cmd1 test <OPTIONS>

OPTIONS:
  -f, --foo <foo>          The foo option
  --bar                    The bar option
  -b, --baz [baz]          The baz option
  -q, --qux <qux>          The qux option
"
`;

exports[`renderUsage > no options 1`] = `
"A test command

USAGE:
  cmd1 test 

EXAMPLES:
  # Example 1
  $test
  # Example 2
  $ test
"
`;

exports[`renderUsage > no required options 1`] = `
"A test command

USAGE:
  cmd1 test <OPTIONS>

OPTIONS:
  -f, --foo <foo>          The foo option
  --bar                    The bar option
  -b, --baz [baz]          The baz option
"
`;

exports[`renderUsage > sub commands 1`] = `
"USAGE:
  cmd1 [show] <OPTIONS> 
  cmd1 <COMMANDS>

COMMANDS:
  show              A show command  
  command1          this is command1  
  command2            

For more info, run any command with the \`--help\` flag:
  cmd1 show --help
  cmd1 command1 --help
  cmd1 command2 --help

OPTIONS:
  -f, --foo <foo>          The foo option
  --bar                    The bar option
  -b, --baz [baz]          The baz option
  -q, --qux <qux>          The qux option

EXAMPLES:
  # Example 1
  $ test --foo bar --bar --baz 42 --qux quux
  # Example 2
  $ test -f bar -b 42 -q quux
"
`;

exports[`renderValidationErrors 1`] = `
"Option '--dependency' or '-d' is required
Option '--alias' or '-a' is required"
`;
